--- a/Odotocodot.OneNote.Linq/Odotocodot.OneNote.Linq.csproj
+++ b/Odotocodot.OneNote.Linq/Odotocodot.OneNote.Linq.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows</TargetFramework>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Title>Linq for OneNote</Title>
+    <Authors>Odotocodot</Authors>
+    <PackageReadmeFile>Readme.md</PackageReadmeFile>
   </PropertyGroup>
     
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -11,6 +15,13 @@
 
   <ItemGroup>
     <PackageReference Include="Interop.Microsoft.Office.Interop.OneNote" Version="1.1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 </Project>
 
